--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.1.0",
     "react-native-toast-message": "^2.2.0",
     "twrnc": "^4.2.0"
