--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
@@ -18,6 +19,7 @@
     "expo-splash-screen": "^0.26.4",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-heroicons": "^4.0.0",
     "react-native-modal": "^13.0.1",
@@ -28,6 +30,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.1.0",
     "react-native-toast-message": "^2.2.0",
+    "react-native-web": "~0.19.6",
     "twrnc": "^4.2.0"
   },
   "devDependencies": {
